# AutoFoFoDJ

./: CMakeLists.txt  README.md
include/: Mp3Processor.h  dbg.h
src/MusicPlayer/: Mp3Processor.cpp
src/MusicPlayer/exec/: TestConvert.cpp
